# clash-tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  Makefile.toml  README.en.md  README.md  SECURITY.md  deny.toml  renovate.json
.cargo/: config.toml
.codex/: project-conventions.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
crates/clash-core/: Cargo.toml  build.rs
crates/clash-core/src/: constants.rs  events.rs  kernel.rs  lib.rs  paths.rs  validation.rs  yaml.rs
crates/clash-core/src/config/: app_settings.rs  clash.rs  dns.rs  enhance.rs  mod.rs  profiles.rs  runtime.rs  store.rs  subscription_headers.rs
crates/clash-mihomo/: Cargo.toml
crates/clash-mihomo/src/: client.rs  lib.rs  models.rs
crates/clash-tui/: Cargo.toml  build.rs
crates/clash-tui/src/: jobs.rs  kernel.rs  main.rs  metrics.rs  options.rs  state.rs  subscriptions.rs  system_info.rs  terminal_display.rs  timeouts.rs  validation.rs
crates/clash-tui/src/actions/: config.rs  controller.rs  core.rs  diagnose.rs  mod.rs  profile_transaction.rs  profiles.rs  runtime.rs  runtime_apply.rs  subscriptions.rs  system.rs
crates/clash-tui/src/cli/: mod.rs
crates/clash-tui/src/mihomo_controller/: mod.rs
crates/clash-tui/src/platform/: mod.rs
crates/clash-tui/src/tui/: mod.rs
crates/clash-tui/src/tui/app/: details.rs  events.rs  frame.rs  input.rs  labels.rs  mod.rs  models.rs  refresh.rs  runner.rs  selection.rs  state.rs  tests.rs  text.rs
crates/clash-tui/src/tui/views/: connections.rs  dashboard.rs  jobs.rs  layout.rs  logs.rs  mod.rs  profiles.rs  provider_dialog.rs  proxies.rs  rules.rs  settings.rs
packaging/: install.sh
packaging/clash-tui/: Dockerfile  README.md  env.example  install.sh
packaging/clash-tui/systemd/: clash-tui.service
scripts/: clash-tui-remote-smoke.sh  clash-tui-system-proxy-gnome-acceptance.sh  clash-tui-system-proxy-gnome-smoke.py  clash-tui-tun-linux-smoke.py  test_clash_tui_system_proxy_gnome_acceptance.py  test_clash_tui_system_proxy_gnome_smoke.py  test_clash_tui_tun_linux_smoke.py
template/: Changelog.md
xtask/: Cargo.toml
xtask/src/: main.rs  package.rs  package_verify.rs  script_tests.rs
