[package]
name = "clash-core"
edition = "2024"
rust-version = "1.91"
license = "GPL-3.0-only"
publish = false
description = "Core configuration and runtime logic for clash-tui"
repository = "https://github.com/haokejie/clash-tui"
homepage = "https://github.com/haokejie/clash-tui"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
boa_engine = { workspace = true }
clash-mihomo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
reqwest = { version = "0.13.2", features = ["rustls"] }
base64 = "0.22.1"
percent-encoding = "2.3.2"
tokio = { workspace = true, features = ["fs"] }

[lints]
workspace = true
