[package]
name = "clash-mihomo"
edition = "2024"
rust-version = "1.91"
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"] }

[lints]
workspace = true
