[package]
name = "clash-mihomo"
edition = "2024"
rust-version = "1.91"
license = "GPL-3.0-only"
publish = false
description = "Typed mihomo controller client primitives for clash-tui"
repository = "https://github.com/haokejie/clash-tui"
homepage = "https://github.com/haokejie/clash-tui"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net"] }

[lints]
workspace = true
