[package]
name = "clash-tui"
edition = "2024"
rust-version = "1.91"
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
clash-core = { workspace = true }
clash-mihomo = { workspace = true }
clap = { version = "4.5.53", features = ["derive", "env"] }
crossterm = "0.29.0"
gethostname = "1.1.0"
libc = "0.2.178"
network-interface = { version = "2.0.5", features = ["serde"] }
ratatui = "0.29.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
sysinfo = { version = "0.38", features = ["network", "system"] }
tokio = { workspace = true, features = ["io-util", "net", "process", "signal"] }
url = "2.5.7"

[lints]
workspace = true
